3rdParty/Haproxy-Ingress/Azure/echo-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: echo-ingress2
    annotations:
        haproxy.org/path-rewrite: "/"
        kubernetes.io/ingress.class: haproxy
spec:
    rules:
    - http:
        paths:
        - path: /echo2
          pathType: Prefix
          backend:
            service:
              name: echo-service
              port:
                number: 8080
