3rdParty/Haproxy-Ingress/Azure/krypton-haproxy-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: krypton-eng-usa-haproxy-grpc-ingress
    annotations:
        haproxy.org/path-rewrite: "/"
        kubernetes.io/ingress.class: nuance-coretech
spec:
    rules:
    - http:
        paths:
        - path: /krypton-eng-usa-haproxy-grpc
          pathType: Prefix
          backend:
            service:
              name: krypton-eng-usa-haproxy-grpc
              port:
                number: 80
