3rdParty/Haproxy-Ingress/Azure/krypton-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: krypton-router-ingress
    annotations:
        haproxy.org/path-rewrite: "/"
        kubernetes.io/ingress.class: nuance-coretech
spec:
    rules:
    - http:
        paths:
        - path: /krypton-router
          pathType: Prefix
          backend:
            service:
              name: krypton-router
              port:
                number: 8090
